# band_positions

./: .docs-location  .gitignore  AGENTS.md  BRASS_BAND_README.md  ELITE_TEST_PIECES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  STREAMING_SEARCH_FIX_SUMMARY.md  WARP.md  export_brass.py  export_piece_analysis.py  generate-app-icon-custom.sh  generate-app-icon.sh  index.html  package-lock.json  package.json  prompt.md  pyproject.toml  quick_analysis.py  run_piece_analysis_notebook.py  run_windrep_analysis.py  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/band-positions/: BAND_TYPE_INTEGRATION.md  README.md  SVELTE5_MIGRATION_COMPLETE.md  index.html  package-lock.json  package.json  svelte5-migration-notes.md  vite.config.ts
config/: streaming_cache.json  streaming_credentials.example.json  streaming_overrides.json
data/: windrep_cache.json
data/json/: dirigenter.json  konkurranser.json
data/notebook_analysis/: composer_analysis.csv  enriched_pieces_analysis.csv  popular_pieces_analysis.csv  set_test_pieces_analysis.csv  successful_pieces_analysis.csv
data/piece_analysis/: all_pieces_20250825_213228.csv  piece_analysis_20250825_213228.json  popular_pieces_20250825_213228.csv  successful_pieces_20250825_213228.csv
data/processed/: 1981_complete.json  1981_placements.csv  1982_complete.json  1983_complete.json  (+81 more)
docs/: PIECE_ANALYSIS.md  index.html
meta/: manual_overrides.json  yearly_urls.json
notebooks/: README.md  competition_analysis.ipynb  piece_analysis.ipynb
scripts/: generate_band_positions.py
src/: App.svelte  app.css  main.ts
(+200 files in other folders)
